# thinning

./: Cargo.toml  README.md  example.tif  example_tiled.tif  example_tiled_sparse.tif  test.py  thin.tif
src/: main.rs  non_empty_blocks.rs
tests/: gen.py  thin.tif
